name:                app-guide
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jmillikan/app-guide#readme
author:              Jesse Millikan
maintainer:          jesse.a.millikan@gmail.com
copyright:           2015
category:            test
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Db
  build-depends:       base
                     , Spock
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , monad-logger
                     , text
                     , transformers
                     , http-types
                     , aeson
                     , esqueleto
                     , unordered-containers
                     , wai-middleware-static
                     , resource-pool
                     , wai
                     , jose
                     , bytestring
                     , mtl
                     , lens
  default-language:    Haskell2010

executable app-guide-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , app-guide
  default-language:    Haskell2010

executable app-guide-jwk
  hs-source-dirs:      app
  main-is:             JWK.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jose
                     , bytestring
                     , aeson
  default-language:    Haskell2010

test-suite app-guide-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , app-guide
                     , aeson
                     , hspec-wai-json
                     , hspec-wai
                     , hspec
                     , Spock
                     , persistent-sqlite
                     , monad-logger                     
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jmillikan/app-guide
